<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/title_background"
    android:clipToPadding="false">

    <!--
    David Gleaton 2/17/21
    View for the Title
    -->



    <ImageView
        android:id="@+id/pig_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pig"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/pig_dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        style="@style/Title"
        android:layout_marginTop="5sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pig_image" />

    <Button
        android:id="@+id/start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Title_Button"
        android:onClick="onStartClick"
        android:text="@string/Start_Game"
        android:layout_marginTop="5sp"
        app:layout_constraintTop_toBottomOf="@id/pig_dice"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

    />
    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Title_Button"
        android:onClick="onHelpClick"
        android:text="@string/About"
        app:layout_constraintTop_toBottomOf="@id/start_game"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>